--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO = "mongodb+srv://admin:admin@mern-estat.iexrxjb.mongodb.net/mern-estat?retryWrites=true&w=majority"
+MONGO = "mongodb+srv://admin:admin@mern-project.d94v79r.mongodb.net/mern?retryWrites=true&w=majority"
